--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,12 @@ dist/
 build/
 
 # Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# FixMe: Unsafe but removing to allow local development
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 # Database
 *.db
